# MckHelper

./: .gitmodules  CMakeLists.txt  DspHelper.cpp  DspHelper.h  DspHelper.hpp  JackHelper.cpp  JackHelper.h  JackHelper.hpp  Makefile  Metronome.cpp  Metronome.hpp  README.md  Transport.cpp  Transport.hpp  WaveHelper.cpp  WaveHelper.hpp
include/MckHelper/: DspHelper.hpp  Transport.hpp
src/: DspHelper.cpp  DspHelper.hpp  JackHelper.cpp  Metronome.cpp  Transport.cpp  WaveHelper.cpp
test/: conversion.cpp
